<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray1"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/setting_lock_applock_state_tv"
                style="@style/setting_title"
                android:text="@string/setting_lock_applock_state_title"
                />
            <Switch
                android:id="@+id/setting_lock_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/setting_lock_lockscreen_tv"
                style="@style/setting_title"
                android:text="@string/setting_lock_lockscreen"
                />

            <Switch
                android:id="@+id/setting_lock_lockscreen_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/setting_lock_reset_password_tv"
                style="@style/setting_title"
                android:text="@string/setting_lock_reset_password"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/next"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
