<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/toolbox_base"
                android:paddingLeft="@dimen/element_default_space"
                android:gravity="center_vertical"
                android:background="@color/titleicon"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:textSize="20sp"
                android:textColor="@color/gray1"
                />


            <RelativeLayout
                android:id="@+id/toolbox_appmanager_rl"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/toolbox_appmanager_iv"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_app_manager"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    />

                <TextView
                    android:id="@+id/toolbox_appmanger_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/titleicon"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/element_default_space"
                    android:text="@string/app_manager"
                    android:layout_toRightOf="@+id/toolbox_appmanager_iv"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/next"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:textSize="20sp"
                android:textColor="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />
            <RelativeLayout
                android:id="@+id/toolbox_junkclean_rl"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/toolbox_junkclean_iv"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_junk_cleaner"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    />

                <TextView
                    android:id="@+id/toolbox_junkclean_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/titleicon"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/element_default_space"
                    android:text="@string/junk_cleaner"
                    android:layout_toRightOf="@+id/toolbox_junkclean_iv"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/next"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:textSize="20sp"
                android:textColor="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />
            <RelativeLayout
                android:id="@+id/toolbox_cpucooler_rl"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/toolbox_cpucooler_iv"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_cpucooler_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    />

                <TextView
                    android:id="@+id/toolbox_cpucooler_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/titleicon"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/element_default_space"
                    android:text="@string/cpu_cooler"
                    android:layout_toRightOf="@+id/toolbox_cpucooler_iv"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/next"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:textSize="20sp"
                android:textColor="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />
            <RelativeLayout
                android:id="@+id/toolbox_notice_rl"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/toolbox_notice_iv"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_notic_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    />

                <TextView
                    android:id="@+id/toolbox_notice_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/titleicon"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/element_default_space"
                    android:text="@string/notification_cleaner"
                    android:layout_toRightOf="@+id/toolbox_notice_iv"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/next"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:textSize="20sp"
                android:textColor="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />
            <RelativeLayout
                android:id="@+id/toolbox_applock_rl"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/toolbox_applock_iv"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_applock_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    />

                <TextView
                    android:id="@+id/toolbox_applock_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/titleicon"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/element_default_space"
                    android:text="@string/applock_top_title"
                    android:layout_toRightOf="@+id/toolbox_applock_iv"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/next"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:textSize="20sp"
                android:textColor="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/toolbox_commonly"
                android:paddingLeft="@dimen/element_default_space"
                android:background="@color/titleicon"
                android:gravity="center_vertical"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:textSize="20sp"
                android:textColor="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />
            <RelativeLayout
                android:id="@+id/toolbox_chargebooster_rl"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/toolbox_chargebooster_iv"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_charge_booster"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    />

                <TextView
                    android:id="@+id/toolbox_chargebooster_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/titleicon"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/element_default_space"
                    android:text="@string/charge_booster"
                    android:layout_toRightOf="@+id/toolbox_chargebooster_iv"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/next"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:textSize="20sp"
                android:textColor="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />
            <RelativeLayout
                android:id="@+id/toolbox_wifi_rl"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/toolbox_wifi_iv"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_wifi_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    />

                <TextView
                    android:id="@+id/toolbox_wifi_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/titleicon"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/element_default_space"
                    android:text="@string/wifi_manager"
                    android:layout_toRightOf="@+id/toolbox_wifi_iv"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/next"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:textSize="20sp"
                android:textColor="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />
            <RelativeLayout
                android:id="@+id/toolbox_trffic_rl"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                >

                <ImageView
                    android:id="@+id/toolbox_trffic_iv"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_traffic2_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    />

                <TextView
                    android:id="@+id/toolbox_trffic_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/titleicon"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:layout_marginLeft="@dimen/element_default_space"
                    android:text="@string/trafficstatistis_top_title"
                    android:layout_toRightOf="@+id/toolbox_trffic_iv"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/next"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:textSize="20sp"
                android:textColor="@color/gray1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>